[project]
name = "ComfyUI-DepthAnythingV3"
description = "ComfyUI nodes to use Depth Anything V3, the latest depth estimation model from ByteDance. For now monocular depth, camera pose estimation and 3D point clouds/gaussians are supported. Models autodownload from HuggingFace."
version = "0.1.1"
license = "Apache-2.0"
dependencies = [
    "huggingface_hub",
    "accelerate",
    "einops",
    "omegaconf",
    "safetensors",
    "addict",
    "trimesh"
]

[project.urls]
Repository = "https://github.com/PozzettiAndrea/ComfyUI-DepthAnythingV3"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "pznodes"
DisplayName = "Depth Anything V3"
Icon = ""
